--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -148,7 +148,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
      "execution_count": null,
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "1+3"
    ]
   },
   {
@@ -170,21 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.8"
   }
  },
  "nbformat": 4,
