new data structures nb

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from fastcore.test import *"
    ]
   },
   {
@@ -35,7 +36,35 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def foo(): pass"
+    "def foo():\n",
+    "    \"\"\"A sample function\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def say_hello(to: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "    \n",
+    "        to (str): Name to say hi to.\n",
+    "    \"\"\"\n",
+    "    return f\"Hello {to}!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "test_eq(say_hello(\"Hamel\"), \"Hello Hamel!\")"
    ]
   },
   {
