update description of binary trees

--- a/nbs/data_structures/binary_trees.ipynb
+++ b/nbs/data_structures/binary_trees.ipynb
@@ -5,9 +5,9 @@
    "id": "c8e2cb1a",
    "metadata": {},
    "source": [
-    "# data_structures\n",
+    "# Binary Trees\n",
     "\n",
-    "> Fill in a module description here"
+    "> Create and operate on Binary Trees"
    ]
   },
   {
